# StudiaRepo

./: .gitignore  README.md
AK/: Projekt.asm  atbashcipher.asm  gameoflife.asm  gameoflife.c  squaresum.asm
AK/Asembler1/: mips1.asm  test.asm
AiSD/aisd10/: input.txt
AiSD/aisd11/: input.txt
AiSD/aisd12/: input.txt
AiSD/aisd7/: input.txt
AiSD/aisd8/: input.txt
AiSD/aisd9/: input.txt
Fizyka/Sprawozdanie 1/: sprawozdanie1.aux  sprawozdanie1.fdb_latexmk  sprawozdanie1.fls  sprawozdanie1.out  sprawozdanie1.tex
Fizyka/Sprawozdanie 2/: obliczenia1.csv  obliczenia12.csv  sprawozdanie2.aux  sprawozdanie2.fdb_latexmk  sprawozdanie2.fls  sprawozdanie2.out  sprawozdanie2.tex  wykres1.csv  wykres2.csv
Fizyka/Sprawozdanie 3/: sprawozdanie3.aux  sprawozdanie3.fdb_latexmk  sprawozdanie3.fls  sprawozdanie3.out  sprawozdanie3.tex
Fizyka/Sprawozdanie 4/: data.csv  sprawozdanie.aux  sprawozdanie.fdb_latexmk  sprawozdanie.fls  sprawozdanie.tex
Fizyka/Sprawozdanie 5/: sprawozdanie.aux  sprawozdanie.fdb_latexmk  sprawozdanie.fls  sprawozdanie.out  sprawozdanie.tex
Matematyka dyskretna/Notatki na kolokwium 1/: 1_multizbiory.tex  2_rachunek_gentzena.tex  3_wlasnosci_relacji.tex  4_podobienstwo.tex  5_pomocne.tex  notatki_kol1.aux  notatki_kol1.fdb_latexmk  (+3 more)
Semestr 3/TEP/Lista4/: CMakeLists.txt  Node.h  Operation.h  Operations.h  TextUtils.cpp  Tree.cpp  Tree.h  TreeManager.cpp  main.cpp
Semestr 3/TEP/Lista5/: CMakeLists.txt  MySmartPointer.h  Node.cpp  RefCounter.h  TextUtils.h  Tree.cpp  Tree.h  TreeBuildResult.h  TreeManager.cpp  TreeManager.h  main.cpp
(+446 files in other folders)
